# MLPro-Int-River

./: .gitignore  .zenodo.json  CITATION.cff  README.md  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: ci.yml  pypi_deploy.yml
deployment/conda/: meta.yaml
deployment/pypi/: setup.cfg
doc/rtd/: conf.py  index.rst  requirements.txt
src/: setup.py
src/mlpro_int_river/: __init__.py
src/mlpro_int_river/wrappers/: __init__.py  anomalydetectors.py  basics.py  clusteranalyzers.py  streams.py
test/: test_examples.py
test/howtos/bf/: howto_bf_streams_001_accessing_data_from_river.py  howto_bf_streams_053_accessing_data_from_river.py
test/howtos/oa/: howto_oa_ca_001_run_kmeans_2d_static.py  howto_oa_ca_002_run_kmeans_2d_dynamic.py  howto_oa_ca_002_run_streamkmeans_2d_dynamic.py  howto_oa_ca_003_run_kmeans_2d_static_normalized.py  howto_oa_ca_004_run_kmeans_2d_dynamic_normalized.py  howto_oa_ca_005_run_kmeans_3d_static.py  howto_oa_ca_006_run_kmeans_3d_dynamic.py  howto_oa_ca_006_run_streamkmeans_3d_dynamic.py  howto_oa_ca_007_run_kmeans_3d_static_normalized.py  howto_oa_ca_008_run_kmeans_3d_dynamic_normalized.py  howto_oa_ca_011_run_streamkmeans_2d_static.py  howto_oa_ca_012_run_streamkmeans_2d_dynamic.py  howto_oa_ca_013_run_streamkmeans_2d_static_normalized.py  howto_oa_ca_014_run_streamkmeans_2d_dynamic_normalized.py  howto_oa_ca_015_run_streamkmeans_3d_static.py  howto_oa_ca_016_run_streamkmeans_3d_dynamic.py  howto_oa_ca_017_run_streamkmeans_3d_static_normalized.py  howto_oa_ca_021_run_clustream_2d_static.py  (+11 more)
(+191 files in other folders)
