[metadata]
name = mlpro-int-river
version = 0.3.0
author = MLPro Team
author_email = mlpro@listen.fh-swf.de
description = MLPro: Integration River
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mlpro-int-river.readthedocs.io
project_urls = 
    Bug Tracker = https://mlpro-int-river.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
full =
    mlpro[full]>=1.9.4
    river>=0.21.0
